<resources>
    <string name="app_name">Bulletin board</string>
    <!-- Menu Drawer Strings -->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_domestic">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_registration">Войдите или зарегистрируйтесь!</string>
    <!-- Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="reset_password_was_sent_to_email">Reset Password was sent to Email</string>
    <string name="email_for_reset_password">Для восстановления пароля укажите Email адрес!</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_error">Не удалось отправить email для подтверждения!</string>
    <string name="send_verification_done">На вашу почту была отправлена ссылка для подтверждения аккаунта.
        Пожалуйста, подтвердите аккаунт!</string>
    <!-- Sign Dialog -->
    <string name="accounts_link_done">Email успешно подключен к Google аккаунту</string>
    <string name="double_email">У вас уже есть аккаунт с эти Email адресом</string>

</resources>